# modbus-utility

./: README.md  pyproject.toml
modbus_utility/: main.py  version.py
modbus_utility/application/: modbus_commands.py
modbus_utility/info/: __init__.py  info.py
modbus_utility/master/: __init__.py  read_registers.py  write_registers.py
modbus_utility/physical/: modbus_serial.py
modbus_utility/slave/: __init__.py  config.py  slave_run.py
modbus_utility/utils/: console_utils.py  device_config_utils.py  message_utils.py  modbus_client.py  modbus_master.py  modbus_slave.py  operation_utils.py
